--- a/SourceGen/MoonTools.ECS.SourceGen.csproj
+++ b/SourceGen/MoonTools.ECS.SourceGen.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="*" />
+    <!-- There is a silly compiler bug in Fedora so we have to pin to 4.12.0 for now -->
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
   </ItemGroup>
 </Project>
